<resources>
    <string name="app_name">Alternative Check-In</string>
    <string name="preference_file_key">GeneralPreferences</string>
    <string name="all_driver">driver</string>

    <!-- MapsActivity -->
    <string name="maps_list">Ver Posições</string>
    <string name="maps_tocheckin">Fazer Check-In</string>

    <!-- LoginActivity -->
    <string name="login_title">Login</string>

    <!-- Dialog -->
    <string name="dialog_text_location">Você precisa estar na localização correta para fazer o check-in</string>
    <string name="dialog_text_permission">É necessário conceder acesso a localização</string>
    <string name="dialog_text_button_continue">Continue</string>
    <string name="dialog_text_button_cancel">Cancelar</string>
    <string name="dialog_text_delete">Tem certeza que deseja deletar?</string>

    <!-- PositionActivity -->
    <string name="position_title">Posições</string>
    <string name="position_checkout">Fazer Checkout</string>

    <!-- All -->
    <string name="content_description_back">botão de voltar</string>

    <!-- LoginActivity -->
    <string name="login_forgot">Esqueci meu acesso</string>
    <string name="login_enter">Entrar</string>
    <string name="login_password">Senha</string>
    <string name="login_email">E-mail</string>
    <string name="login_driver">Nome do motorista</string>
    <string name="login_cod">Código do motorista</string>

    <!-- RecoveryActivity -->
    <string name="recovery_send">Enviar</string>
    <string name="recovery_title">Recuperação de senha</string>

    <!-- AdminActivity -->
    <string name="admin_title">Motoristas</string>
    <string name="admin_empty">Não há nenhum motorista cadastrado!</string>

    <!-- RegisterDriverActivity -->
    <string name="register_title">Adicionar Motorista</string>

    <!-- EditDriverActivity -->
    <string name="edit_title">Editar Motorista</string>

    <!--    Erros Firebase Authentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente mais tarde.</string>

    <!-- ItemDriver -->
    <string name="item_driver_code">Cód. do Motorista:</string>
    <string name="item_driver_name">Nome do Motorista:</string>

</resources>